# prostT5-CLIP

./: .flake8  .gitignore  .gitmodules  README.md  cafa5.dvc  dvc.yaml  env_base.yml  enviroment.yml  environment.yml  nohup.out  params.yaml  pyproject.toml
configs/: accelerate_config.yaml  accelerate_default_config.yaml  model.yaml
notebooks/: Baseline_Evaluation.ipynb  Eval_metric prototype.ipynb  Evaluate_test_train.ipynb  GO term tokens.ipynb  Phi3_embeddings.ipynb  _header.py  clip_embedding_extraction.ipynb  clip_model_train.ipynb  combine_extended_GO_terms.ipynb  create_random_baseline.ipynb  data_exploration.ipynb  dataset_pretraining_processing.ipynb  datasets_viewer.ipynb  debug.ipynb  explore_and_format.ipynb  light_attention.ipynb  llama.ipynb  no_lora.ipynb  pLM_embeddings.ipynb  prototype.ipynb  prototype_mathias.ipynb  test.ipynb  testing_smart_mean_pooling.ipynb  testing_subset_trainer.ipynb  train_clip_model.ipynb  train_clip_model.py  train_clip_model_simple.ipynb  train_plot.ipynb
notebooks/deprecated/: dead_code.py  model.py  model_mathias.py  modules.py  old_prototype.ipynb  test+model_function.ipynb
notebooks/embedding_extraction/: Phi3_embeddings.ipynb  pLM_embeddings.ipynb
notebooks/prototyping/: llama.ipynb
output/: .gitignore
scripts/: extract_tokens.py  test_subset_trainer.py  train_clip.py  train_clip_ddp.py
shared/: embed_cmd.py
src/: _shared.py  subset_trainer.py  test.py  train.py
src/benchmark/: benchmark_homology.py
src/data/: cluster.py  data_module.py  dataloader.py  dataset.py  embed_seq.py  embed_text.py
src/eval/: embed_vis.py  umap.py
src/logging/: wandb.py
src/model/: basic_model.py  configuration_protein_clip.py  data_collator.py  data_collator_multi_input.py  metrics.py  (+9 more)
(+18 files in other folders)
