[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name ="src"
version = "0.0.1"
dependencies = []

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
extend-select = ["C4", "NPY", "PD", "SIM", "TCH"]
ignore = ["E501", "F405"]
show-fixes = true
line-length = 120
# target-version = "py310"

[tool.pylint]
max-line-length = 80
disable = []


