[project]
name = "prostt5-clip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "dvc>=3.59.0",
    "h5py>=3.12.1",
    "lightning>=2.5.0.post0",
    "pyfaidx>=0.8.1.3",
    "tqdm>=4.67.1",
    "transformers>=4.48.1",
    "wandb>=0.19.4",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
extend-select = ["C4", "NPY", "PD", "SIM", "TCH"]
ignore = ["E501", "F405"]
show-fixes = true
line-length = 120
# target-version = "py310"

[tool.pylint]
max-line-length = 80
disable = []


